🌈Fix Spacing Issue

--- a/src/components/sections/about_components/interests.scss
+++ b/src/components/sections/about_components/interests.scss
@@ -21,6 +21,7 @@
   ul {
     padding: 0;
     margin: 0;
+    margin-top: 16px;
     list-style: none;
     li {
       position: relative;
@@ -37,6 +38,13 @@
         margin-bottom: 30px;
       }
     }
+  }
+  h5 {
+    font-size: 16px;
+    margin: 0;
+  }
+  p {
+    margin-bottom: 30px;
   }
 }
 
@@ -56,7 +64,19 @@
 }
 
 .interests-title {
+  margin-bottom: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   padding: 0 30px;
-  margin-top: 24px;
-  margin-bottom: 0;
+  span {
+    color: var(--bg);
+    font-size: 24px;
+  }
+  svg {
+    fill: var(--bg);
+    height: 24px;
+    width: 24px;
+    margin-right: 22px;
+  }
 }
